# apm

./: .gitignore  LICENSE  README.md  apm-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml  release.yml
action/: README.md  action.yml
app/: .env.example  drizzle.config.ts  middleware.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
app/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/components/: agent-icons.tsx  auth-nav.tsx  copy-button.tsx  download-button.tsx  ecosystem-grid.tsx  filter-select.tsx  footer.tsx  header.tsx  install-tabs.tsx  package-card.tsx  panel-bar.tsx  scope-link.tsx  search-bar.tsx  search-modal.tsx  search-trigger.tsx  skill-actions.tsx  skill-md-renderer.tsx  verified-badge.tsx
app/lib/: email.ts  github.ts  package-params.ts  validator.ts
app/public/: install.sh
app/scripts/: test-search.ts
cli/: Cargo.toml  apm-lock.json
cli/.skills/apm/init/: SKILL.md
cli/.skills/apm/install/: SKILL.md
cli/.skills/apm/search/: SKILL.md
cli/.skills/apm/uninstall/: SKILL.md
cli/src/: lockfile.rs  main.rs  manifest.rs  types.rs  validator.rs
cli/src/commands/: info.rs  init.rs  install.rs  mod.rs  publish.rs  search.rs  uninstall.rs  update.rs  validate.rs
docs/: .gitignore  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/app/: global.css  layout.config.tsx  layout.tsx
docs/components/: callout.tsx
docs/lib/: source.ts
npm/apm-cli/: package.json
npm/darwin-arm64/: package.json
(+113 files in other folders)
