[package]
name = "apm"
version = "0.1.0"
edition = "2021"
description = "Agent Package Manager — a package manager for agent skills"
license = "MIT"
repository = "https://github.com/orthogonalhq/apm"
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
dirs = "5"
regex-lite = "0.1"
